# routes/api.php
@@ -3,6 +3,7 @@
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
 use App\Http\Controllers\Api\LoginController;
+use App\Http\Controllers\Api\UserController;
 use App\Http\Controllers\Auth\RegisteredUserController;
 use App\Http\Controllers\Api\ProductController;
 use app\Http\Controllers\TestController;
@@ -17,21 +18,25 @@ Route::controller(LoginController::class)->prefix('login')->name('login.')->grou
     Route::post('/', 'store');
 });
 
-Route::middleware(['auth:sanctum'])->group(function () {
+Route::middleware(['auth:token-cookie'])->group(function () {
     Route::get('/user', function (Request $request) {
         return $request->user();
+    });
+    Route::controller(UserController::class)->prefix('user')->name('user.')->group(function () {
+        Route::get('/', 'show');
+        Route::put('/', 'update');
     });
     Route::post('/logout', [LoginController::class, 'destroy']);
 });
 
-Route::get('/hello', function () {
-    return response()->json(['message' => 'Hello from API!']);
-});
+// Route::get('/hello', function () {
+//     return response()->json(['message' => 'Hello from API!']);
+// });
 
-Route::controller(ProductController::class)->prefix('products')->group(function () {
-    Route::get('/','index');
-    Route::post('/','store');
-    Route::get('/{id}','show');
-    Route::put('/{id}', 'update');
-    Route::delete('/{id}', 'destroy');
-});
+// Route::controller(ProductController::class)->prefix('products')->group(function () {
+//     Route::get('/','index');
+//     Route::post('/','store');
+//     Route::get('/{id}','show');
+//     Route::put('/{id}', 'update');
+//     Route::delete('/{id}', 'destroy');
+// });
